--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,18 @@
     <link href='https://fonts.googleapis.com/css?family=lobster' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' href="https://cdnjs.cloudflare.com/ajax/libs/design-system/2.8.3/fonts/SalesforceSans-Bold.ttf">
     <link rel='stylesheet' href="./stylesheets/style.css">
-    
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/require.js"></script>
     <script type="text/javascript">
+      (function () {
+        var config = {
+          baseUrl: "",
+        };
+
+        var dependencies = ["customActivity"];
+
+        require(config, dependencies);
+      })();
     </script>
 </head>
 
