--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,14 @@
 <!DOCTYPE html>
-<html>
 
-<head>
-    <title>JOURNEY BUILDER APP TEMPLATE</title>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie-edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <link href='https://fonts.googleapis.com/css?family=lobster' rel='stylesheet' type='text/css'>
-    <link rel='stylesheet' href="https://cdnjs.cloudflare.com/ajax/libs/design-system/2.8.3/fonts/SalesforceSans-Bold.ttf">
-    <link rel='stylesheet' href="./stylesheets/style.css">
-    <script type="text/javascript" src="../js/jquery.js"></script>
-    <script type="text/javascript" src="../js/postmonger.js"></script>
-    <script type="text/javascript" src="../js/require.js"></script>
-    <script type="text/javascript">
-      (function () {
-        var config = {
-          baseUrl: "",
-        };
-
-        var dependencies = ["customActivity"];
-
-        require(config, dependencies);
-      })();
-    </script>
-</head>
-
-
-<body>
-    <h1>THIS IS THE APP UI PORTION</h1>
+<html lang="en">
+  <head>
+    <title>Journey Builder Activity</title>
+    <link rel="stylesheet" type="text/css" href="/home/stylesheets/style.css">
+  </head>
+  <body>
+    <h3>Configuration JSON</h3>
     <textarea id="configuration"></textarea>
-</body>
-
+    <script src="../js/postmonger.js"></script>
+    <script src="/routes/activity.js"></script>
+  </body>
 </html>
