--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <body>
     <h3>Configuration JSON</h3>
     <textarea id="configuration"></textarea>
-    <script src="../js/postmonger.js"></script>
-    <script src="/routes/activity.js"></script>
+    <script src="postmonger.js"></script>
+    <script src="activity.js"></script>
   </body>
 </html>
